sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:8: error: not found: value getnombreValeurs
    for (i<- 0 to getnombreValeurs() - 2) {
                  ^AlgCocktailSort1:11: error: not found: value getnombreValeurs
    for (i<- getnombreValeurs() - 2 to 0) {
             ^